--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,6 +67,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/Welcome"
                 android:text="Hi, Tigran"
                 android:textSize="30sp"
                 android:textStyle="bold"
