--- a/app/src/main/res/layout/activity_edit_account.xml
+++ b/app/src/main/res/layout/activity_edit_account.xml
@@ -10,8 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="35dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="10dp">
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp">
 
         <ImageView
             android:id="@+id/backToProfileArrow"
@@ -115,9 +115,9 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
                     android:text="Surname"
-                    android:textSize="20sp"
-                    android:layout_marginTop="15dp"/>
+                    android:textSize="20sp" />
 
                 <EditText
                     android:id="@+id/editAccountSurname"
@@ -137,28 +137,30 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Email"
-                    android:textSize="20sp"
-                    android:layout_marginTop="15dp"/>
+                    android:layout_marginTop="15dp"
+                    android:text="Confrom password"
+                    android:textSize="20sp" />
 
                 <EditText
-                    android:id="@+id/editAccountEmail"
+                    android:id="@+id/editAccountConfromPassword"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginTop="15dp"
                     android:background="@drawable/custom_edittext"
                     android:drawablePadding="8dp"
-                    android:hint="Email"
+                    android:hint="Password"
                     android:imeOptions="actionDone"
-                    android:inputType="textPersonName"
+                    android:inputType="textPassword"
                     android:padding="8dp"
                     android:paddingStart="20sp"
                     android:textColor="@color/black"
                     tools:ignore="RtlSymmetry" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:layout_marginTop="15dp">
+
                     <TextView
                         android:id="@+id/changePasswordTextEditProfile"
                         android:layout_width="wrap_content"
@@ -166,25 +168,26 @@
                         android:layout_gravity="center"
                         android:text="Change password"
                         android:textColor="@color/purpur"
-                        android:textStyle="bold"
-                        android:textSize="20sp" />
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
                     <ImageView
                         android:id="@+id/changePasswordArrowEditProfile"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
-                        android:layout_marginStart="10dp"
                         android:layout_gravity="center"
+                        android:layout_marginStart="10dp"
                         android:background="@drawable/__icon__arrow_forward_ios_" />
                 </LinearLayout>
 
                 <Button
+                    android:id="@+id/saveButtonProfileEdit"
                     android:layout_width="300dp"
                     android:layout_height="60dp"
                     android:layout_marginTop="30dp"
-                    android:text="Save"
-                    android:id="@+id/saveButtonProfileEdit"
-                    android:textSize="18sp"
                     android:backgroundTint="@color/purpur"
+                    android:text="Save"
+                    android:textSize="18sp"
                     app:cornerRadius="20dp" />
             </LinearLayout>
         </ScrollView>
