--- a/app/src/main/res/layout/fragment_workouts.xml
+++ b/app/src/main/res/layout/fragment_workouts.xml
@@ -67,6 +67,7 @@
                 app:layout_constraintTop_toBottomOf="@id/header">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/armsConstraintLayout"
                     android:layout_width="325dp"
                     android:layout_height="150dp"
                     android:layout_marginTop="16dp"
