--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -368,6 +368,7 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/mainFragmentArms"
                         android:layout_width="225dp"
                         android:layout_height="150dp"
                         android:background="@drawable/shape3"
