--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -62,6 +62,7 @@
                 android:layout_marginTop="10dp"
                 android:orientation="vertical">
                 <TextView
+                    android:id="@+id/exercisesCount"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="x 8"
@@ -87,18 +88,21 @@
                 android:gravity="center">
 
                 <ImageView
+                    android:id="@+id/arrowBack"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:rotationY="180"
                     android:src="@drawable/__icon__arrow_forward_ios_"/>
 
                 <Button
+                    android:id="@+id/doneButton"
                     android:layout_width="200dp"
                     android:layout_height="60dp"
                     android:text="Done"
                     android:layout_margin="20dp"/>
 
                 <ImageView
+                    android:id="@+id/arrowNext"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/__icon__arrow_forward_ios_" />
