--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -131,6 +131,7 @@
                             android:textSize="20sp" />
 
                         <TextView
+                            android:id="@+id/finishedText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="0"
