--- a/app/src/main/res/layout/activity_rest.xml
+++ b/app/src/main/res/layout/activity_rest.xml
@@ -86,6 +86,7 @@
                         android:layout_weight="1"
                         android:gravity="center">
                         <TextView
+                            android:id="@+id/nextWorkoutTextView"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="NEXT 5/25"
@@ -102,6 +103,7 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/exerciseNameTextView"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="NEXT EXERCISE NAME"
@@ -110,6 +112,7 @@
                             android:textSize="20sp"
                             android:textColor="@color/matching_pupur"/>
                         <TextView
+                            android:id="@+id/exerciseCountTextView"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="X 8"
