--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -43,8 +43,7 @@
                 android:id="@+id/workoutActivityGif"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/cardiowomangif" />
+                android:scaleType="centerCrop" />
 
         </LinearLayout>
 
