--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -195,6 +195,7 @@
                             android:layout_height="match_parent"
                             android:orientation="horizontal">
                             <TextView
+                                android:id="@+id/inProgressTextView"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="0"
@@ -248,6 +249,7 @@
                             android:layout_height="match_parent"
                             android:orientation="horizontal">
                             <TextView
+                                android:id="@+id/timeSpentTextView"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="0"
@@ -257,6 +259,7 @@
                                 android:layout_marginStart="15dp"/>
 
                             <TextView
+                                android:id="@+id/timeText"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Minutes"
